--- a/JlTranslatorTool/MainWindow.ui
+++ b/JlTranslatorTool/MainWindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>355</height>
+    <width>840</width>
+    <height>480</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -23,7 +23,7 @@
      </widget>
     </item>
     <item row="0" column="1">
-     <widget class="QLineEdit" name="lineEdit">
+     <widget class="QLineEdit" name="lineEdit_InputFile">
       <property name="readOnly">
        <bool>true</bool>
       </property>
